--- a/src/com/Ostermiller/attesoro/Editor.properties
+++ b/src/com/Ostermiller/attesoro/Editor.properties
@@ -329,6 +329,9 @@ file_menu_name=File
 find_menu_description=Search for text in translations.
 find_menu_key=f
 find_menu_name=Find...
+getcode_menu_description=Get useful java code from current seleted language.
+getcode_menu_key=j
+getcode_menu_name=Get Java code
 help_menu_description=Program documentation and information.
 help_menu_key=h
 help_menu_name=Help
@@ -459,6 +462,7 @@ language_yi=Yiddish
 language_yo=Yoruba
 language_zh=Chinese
 language_zu=Zulu
+load_file_title=Please select a properties file
 load_menu_description=Load translation data from a set of translation files.
 load_menu_key=o
 load_menu_name=Open...
